# DirectMCLaunch

./: .dockerignore  Cargo.toml  Dockerfile.linux  Dockerfile.windows  README.md  build.rs
.github/workflows/: release.yml
assets/: mc.icns
src/: main.rs
