[package]
name = "DirectMCLaunch"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
eframe = "0.29.0"
egui = "0.29.0"
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
uuid = { version = "1.23.3", features = ["v4"] }
[target."cfg(windows)".dependencies]
mslnk = "0.1.8"

[build-dependencies]
winres = "0.1.12"
